* Wed Jun 16 2021 Chris Tessmer <chris.tessmer@onyxpoint.com> - 7.1.0
- Removed support for Puppet 5
- Ensured support for Puppet 7 in requirements and stdlib

* Mon Jan 11 2021 Chris Tessmer <chris.tessmer@onyxpoint.com> - 7.0.2
- Fixed formatting in the metadata.json file.

* Thu Nov 12 2020 Trevor Vaughan <tvaughan@onyxpoint.com> - 7.0.1-0
- Update the required version of simp/svckill to the puppet 6 safe version.

* Fri Jan 10 2020 Liz Nemsick <lnemsick.simp@gmail.com> - 7.0.0-0
- Added EL8 support
- Dropped EL6 support
- Refactored the module.  Notable feature/API changes:
  - Overall changes
    - Dropped stunnel support for NFSv3.  This tunneling did not work because:
      - The NFS client sends the NFS server Network Status Manager (NSM)
        notifications via UDP, exclusively.
      - At multi-NFS-server sites, a unique `rpcbind` port per server is
        required in order for a NFS client to be able tunnel its
        server-specific RPC requests to the appropriate server.
    - nfs class
      - Reworked parameters to reflect configuration of /etc/nfs.conf and,
        for limited EL7-only configuration, /etc/sysconfig/nfs.  See the class
        documentation for full details.
    - Remove $stunnel_systemd_deps and $sunnel_tcp_nodelay parameters throughout
      the module.
      - These parameters were not consistently used in the manifest
        code (i.e., declared but not used) and were confusing.
      - The corresponding $stunnel_socket_options and $stunnel_wantedby
        parameters in classes/defines now use defaults that were intended to be
        set by those parameters.
    - Now masks NFS services that are not needed, so they are not unnecessarily
      started when the nfs-server.service or nfs-client.target are restarted.
    - Moved simp-autofs, simp-krb5, simp-iptables, simp-stunnel, and
      simp-tcpwrappers to simp/optional_dependencies in the metadata.json.
  - nfs::client